<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="35sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"/>

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcomeTextView"
            android:layout_marginTop="220dp"
            android:layout_centerInParent="true">

            <TableRow
                android:id="@+id/row"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/date"
                    android:textSize="21sp" />
                <TextView
                    android:id="@+id/cur_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/money"
                    android:textSize="21sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/category"
                    android:textSize="21sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/person"
                    android:textSize="21sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/paid"
                    android:textSize="21sp" />
            </TableRow>
        </TableLayout>
        <TextView
            android:id="@+id/spending_text"
            android:layout_below="@id/welcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/budget"
            android:layout_marginTop="20dp"
            android:textSize="25sp">
        </TextView>
        <Button
            android:id="@+id/showInputDialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@id/spending_text"
            android:layout_marginTop="10sp"
            android:textSize="21sp"
            android:text="@string/set_budget" />
        <TextView
            android:id="@+id/cur_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/cur_spending"
            android:textSize="25sp"
            android:layout_centerInParent="true"
            android:layout_below="@id/showInputDialogButton">
        </TextView>
        <Button
            android:id="@+id/addEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:layout_marginTop="10sp"
            android:layout_centerInParent="true"
            android:layout_below="@id/cur_budget"
            android:text="@string/add_button" />

    </RelativeLayout>
</ScrollView>
